[ACS-8450] Fixed issue where required marker * was not showing up for create rule > Name field (#3984)
* [ACS-8450] Fixed issue where required marker * was not showing up for creat rule > Name field

* [ACS-8450] Fixed alignment issue

* [ACS-8450] Changed styling selectors

* [ACS-8450] Added null/undefined safety check for name

--- a/projects/aca-content/folder-rules/src/rule-details/rule-details.ui-component.scss
+++ b/projects/aca-content/folder-rules/src/rule-details/rule-details.ui-component.scss
@@ -51,6 +51,10 @@
         max-width: 400px;
         font-size: inherit;
 
+        label[for='rule-details-name-input'] {
+          transform: translateY(-20%) scale(1);
+        }
+
         &__textarea {
           min-height: 4em;
         }
